refactor(geometry): 优化椭圆弧形状的实现细节
- 将 points.get(0) 替换为 points.getFirst() 以提高代码可读性
- 将 points.get(points.size() - 1) 替换为 points.getLast()
- 在 clone 方法中添加 Shape 类型变量声明
- 简化 TransformCommand 中的非均匀缩放条件判断逻辑